--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>NewsJunky - Your favorite news app</title>
+  <title>Newsingo - Your favorite news app</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
 </head>
@@ -12,30 +12,41 @@
 <body>
   <nav class="navbar navbar-expand-lg bg-body-tertiary">
     <div class="container-fluid">
-      <a class="navbar-brand" href="#">NewsJunky</a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
+      <a class="navbar-brand" href="#">Newsingo</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="/?q=all&pageno=1">Home</a>
+            <a class="nav-link active" aria-current="page" href="/?top-headlines?category=general&lang=en">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/?q=sports&pageno=1">Sports</a>
+            <a class="nav-link" href="/?top-headlines?category=sports&lang=en">Sports</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/?q=india&pageno=1">India</a>
+            <a class="nav-link" href="/?top-headlines?category=country&lang=en&country=in">India</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/?q=Indian+Weather&pageno=1">Indian Weather</a>
+            <a class="nav-link" href="/?top-headlines?category=science&lang=en">Science</a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/?top-headlines?category=business&lang=en">Business</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/?top-headlines?category=technology&lang=en">Technology</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/?top-headlines?category=health&lang=en">Health</a>
+          </li>
+
 
 
         </ul>
         <form class="d-flex" role="search">
           <input class="form-control me-2" name="q" type="search" placeholder="Search" aria-label="Search">
-          <input class="form-control me-2" name="pageno" type="hidden" value="1" placeholder="Search" aria-label="Search">
+          <input class="form-control me-2" type="hidden" value="1" placeholder="Search" aria-label="Search">
           <button class="btn btn-outline-success" type="submit">Search</button>
         </form>
       </div>
@@ -43,14 +54,14 @@
   </nav>
 
   <div class="container  mx-auto">
-    <h1 class="text-center my-2 "><span id="queryText"></span> - NewsJunky News </h1>
+    <h1 class="text-center my-2 "><span id="queryText"></span> - Newsingo News </h1>
     <div id="content" class="row">
       <div class="d-flex justify-content-center">
         <img width="23" src="https://samherbert.net/svg-loaders/svg-loaders/oval.svg" style="filter: invert(1)">
       </div>
     </div>
 
-        <h4 class="text-centre" >(<span class="text-center" id="queryResults"></span> results)</h4>
+    <h4 class="text-centre">(<span class="text-center" id="queryResults"></span> results)</h4>
     <div class="prevNext my-4 d-flex align-items-centre justify-content-center">
       <nav aria-label="Page navigation example">
         <ul class="pagination">
@@ -59,44 +70,84 @@
           <li class="page-item"><a id="two" class="page-link" href="#">2</a></li>
           <li class="page-item"><a id="three" class="page-link" href="#">3</a></li>
           <li class="page-item"><a id="ten" class="page-link" href="#">10</a></li>
-          
+
           <li class="page-item"><a id="next" class="page-link" href="#">Next</a></li>
         </ul>
       </nav>
-      
+
     </div>
   </div>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous">
-  </script>
+    </script>
   <script>
-    let articlesPerPage = 10;
-    let totalPages;
+    // let articlesPerPage = 10;
+    // let totalPages;
     console.log("Hey I am javascript")
-    let query = window.location.search.split("?")[1].split("&")[0].split("=")[1];
-    let page = parseInt(window.location.search.split("?")[1].split("&")[1].split("=")[1]);
-    console.log(query, page)
-    const fetchNews = async (query, pageNo)=>{
-        let a = await fetch(`/api?q=${query}&apiKey=c4e7ad803d744ab9857b4e8d375ec744&pageSize=10&page=${pageNo}`)
-        let r = await a.json()
-        console.log(r)
-        let rquery = query.replace("+", " ")
-        queryText.innerHTML = rquery.toUpperCase();
-        queryResults.innerHTML = r.totalResults
-        totalPages = Math.round(r.totalResults/articlesPerPage)
-        // max.innerHTML = totalPages
-        pre.href = `/?q=${query}&pageno=${page-1}`
-        next.href = `/?q=${query}&pageno=${page+1}`
-        one.href = `/?q=${query}&pageno=1`
-        two.href = `/?q=${query}&pageno=2`
-        three.href = `/?q=${query}&pageno=3`
-        ten.href = `/?q=${query}&pageno=10`
-        let str = ""
-        for(let item of r.articles){
-          let date = new Date(item.publishedAt).toLocaleDateString()
-          str = str + `
+    console.log(window.location.search)
+
+
+    //   if (window.location.search.startsWith('?')) {
+    // query = search + window.location.search.split("?")[1].split("&")[0].split("=")[1];
+    if (window.location.search.startsWith('?')) {
+      if (window.location.search.startsWith('?q=')) {
+        const queryParam = window.location.search.split('=')[1];
+        query = 'search?q=' + decodeURIComponent(queryParam.replace(/\+/g, ' '));
+      } else if (window.location.search.startsWith('?top-headlines')) {
+        query = window.location.search.slice(1);
+      }
+      // } else if (window.location.search.startsWith('top-headlines')) {
+      //   query = window.location.search;
+    } else {
+      // Handle other cases if needed
+    }
+
+
+
+
+    // let querypart1 = window.location.search.split("?")[1].split("&")[0].split("=")[1];
+    // let querypart2 =
+    // let page = parseInt(window.location.search.split("?")[1].split("&")[1].split("=")[1]);
+    console.log(query)
+    const fetchNews = async (query) => {
+      let a = await fetch(`https://gnews.io/api/v4/${query}&apikey=59514fabac57b01a14e48c51b4dcf96b`)
+      let r = await a.json()
+      console.log(r)
+      // let rquery = query.replace("+", " ")
+      function setTextFromQuery(query) {
+        let text = '';
+
+        if (query.startsWith('top-headlines?')) {
+          const categoryParam = 'category=';
+          const categoryIndex = query.indexOf(categoryParam);
+          if (categoryIndex !== -1) {
+            const categoryValueStart = categoryIndex + categoryParam.length;
+            const categoryValueEnd = query.indexOf('&', categoryValueStart);
+            text = query.substring(categoryValueStart, categoryValueEnd !== -1 ? categoryValueEnd : undefined);
+          }
+        } else if (query.startsWith('search?q=')) {
+          text = query.substring('search?q='.length);
+        }
+
+        return text;
+      }
+
+      queryText.innerHTML = setTextFromQuery(query).toUpperCase();
+      queryResults.innerHTML = r.totalArticles
+      // totalPages = Math.round(r.totalResults / articlesPerPage)
+      // max.innerHTML = totalPages
+      pre.href = `/?q=${query}`
+      next.href = `/?q=${query}`
+      one.href = `/?q=${query}`
+      two.href = `/?q=${query}`
+      three.href = `/?q=${query}`
+      ten.href = `/?q=${query}`
+      let str = ""
+      for (let item of r.articles) {
+        let date = new Date(item.publishedAt).toLocaleDateString()
+        str = str + `
               <div class="card m-2" style="width: 18rem;">
-      <img src="${item.urlToImage}" class="card-img-top" alt="...">
+      <img src="${item.image}" class="card-img-top" alt="...">
       <div class="card-body">
         <h5 class="card-title">${item.title}</h5>
         <span class="fw-bold">Published </span> : ${date}
@@ -105,11 +156,11 @@
       </div>
     </div>
           `
-        }
-        content.innerHTML = str;
+      }
+      content.innerHTML = str;
     }
 
-    fetchNews(query, page)
+    fetchNews(query)
 
   </script>
 </body>
