--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Newsingo - Your favorite news app</title>
+  <title>NEWSINGO - Your favorite news app</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
 </head>
@@ -400,7 +400,7 @@
   <nav class=" navbar navbar-dark navbar-expand-lg bg-body-tertiary"
     style="background: linear-gradient(112.1deg, rgb(32, 38, 57) 11.4%, rgb(63, 76, 119) 70.2%); ">
     <div class="container-fluid">
-      <a class="navbar-brand" href="#">Newsingo</a>
+      <a class="navbar-brand" href="#">NEWSINGO</a>
       <button class="navbar-toggler " type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
         aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -443,7 +443,7 @@
   </nav>
 
   <div class="container  mx-auto">
-    <h1 class="text-center my-2 "><span id="queryText"></span> - Newsingo News </h1>
+    <h1 class="text-center my-2 "><span id="queryText"></span> - NEWSINGO News </h1>
     <div id="content" class="row">
       <div class="d-flex justify-content-center">
 
