--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>NEWSINGO - Your favorite news app</title>
+  <title>NEWSINGO - Your favorite News app</title>
+  <link rel="icon" type="image/png" href="../favicon.PNG">
+  <link rel="icon" type="image/x-icon" href="../favicon.ico">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
 </head>
@@ -400,7 +402,11 @@
   <nav class=" navbar navbar-dark navbar-expand-lg bg-body-tertiary"
     style="background: linear-gradient(112.1deg, rgb(32, 38, 57) 11.4%, rgb(63, 76, 119) 70.2%); ">
     <div class="container-fluid">
-      <a class="navbar-brand" href="#">NEWSINGO</a>
+      <!-- <a class="navbar-brand" href="#">NEWSINGO</a> -->
+      <a href="#">
+
+        <img src="../favicon.PNG" style="width: 50px; height: auto; margin-right: 10px;" alt="NEWSINGO">
+      </a>
       <button class="navbar-toggler " type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
         aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -470,9 +476,9 @@
     integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous">
     </script>
   <script>
-    console.log("Hey I am javascript")
-    console.log(window.location.search)
-    let query = "top-headlines?category=general&lang=en"
+    // console.log("Hey I am javascript")
+    // console.log(window.location.search)
+    let query = "top-headlines?category=general&lang=en&country=in"
     if (window.location.search.startsWith('?')) {
       if (window.location.search.startsWith('?q=')) {
         const queryParam = window.location.search.split('=')[1];
@@ -486,11 +492,11 @@
 
     // Your program logic continues here
 
-    console.log(query)
+    // console.log(query)
     const fetchNews = async (query) => {
-      let a = await fetch(`https://gnews.io/api/v4/${query}&apikey=59514fabac57b01a14e48c51b4dcf96b`)
+      // let a = await fetch(`https://gnews.io/api/v4/${query}&apikey=59514fabac57b01a14e48c51b4dcf96b`)
       let r = await a.json()
-      console.log(r)
+      // console.log(r)
       function setTextFromQuery(query) {
 
         if (query.startsWith('top-headlines?')) {
@@ -580,7 +586,7 @@
 
       // Function to handle the animation
       function handleArticleAnimation() {
-        for (let i = 0; i < r.articles.length; i++) {
+        for (let i = 0; i < articles.length; i++) {
           const article = articles[i];
           if (isElementInViewport(article) && !article.classList.contains('animated')) {
             article.classList.add('animated');
