--- a/index.html
+++ b/index.html
@@ -494,7 +494,7 @@
 
     // console.log(query)
     const fetchNews = async (query) => {
-      // let a = await fetch(`https://gnews.io/api/v4/${query}&apikey=59514fabac57b01a14e48c51b4dcf96b`)
+      let a = await fetch(`https://gnews.io/api/v4/${query}&apikey=59514fabac57b01a14e48c51b4dcf96b`)
       let r = await a.json()
       // console.log(r)
       function setTextFromQuery(query) {
