Minor UI changes

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
   }
 
   .animated-article.animate {
-    animation: slideInRight 2.5s ease-in;
+    animation: slideInRight 2.2s ease-in;
     min-height: 100%;
     display: flex;
     flex-wrap: nowrap;
@@ -465,7 +465,7 @@
       <!-- <a class="navbar-brand" href="#">NEWSINGO</a> -->
       <a href="#">
 
-        <img src="../favicon.PNG" style="width: 50px; height: auto; margin-right: 10px;" alt="NEWSINGO">
+        <img src="../favicon1.png" style="width: auto; height: 50px; margin-right: 10px;" alt="NEWSINGO">
       </a>
       <button class="navbar-toggler " type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
         aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
